--- a/packages/preamble_v1.0.tex
+++ b/packages/preamble_v1.0.tex
@@ -33,7 +33,7 @@
 \usepackage[rightcaption]{sidecap} %subtítulos alrededor de figuras
 \usepackage{ifthen} %condicionales
 \usepackage{xparse} % Para manejar parámetros opcionales
-
+\spanishdecimal{.}
 % FORMATO PARA FIGURAS Y SUBFIGURAS
 \DeclareCaptionFormat{format1}{
 %#1=label, #2 = separator, #3 = text
